created new individual pages for nav and removed home tag
added class "head-top" and "section-show"for the page's headers and section
This is for the navbar to appear at the top and sections to be visible once tags are cicked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -651,16 +651,16 @@ section .container {
 }
 
 /*--------------------------------------------------------------
-# Services
+# connect
 --------------------------------------------------------------*/
-.services .icon-box {
+.connect .icon-box {
   text-align: center;
   background: rgba(204, 204, 204, 0.1);
   padding: 80px 20px;
   transition: all ease-in-out 0.3s;
 }
 
-.services .icon-box .icon {
+.connect .icon-box .icon {
   margin: 0 auto;
   width: 64px;
   height: 64px;
@@ -674,12 +674,12 @@ section .container {
   transform-style: preserve-3d;
 }
 
-.services .icon-box .icon i {
+.connect .icon-box .icon i {
   color: #fff;
   font-size: 28px;
 }
 
-.services .icon-box .icon::before {
+.connect .icon-box .icon::before {
   position: absolute;
   content: '';
   left: -8px;
@@ -692,40 +692,40 @@ section .container {
   transform: translateZ(-1px);
 }
 
-.services .icon-box h4 {
+.connect .icon-box h4 {
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 24px;
 }
 
-.services .icon-box h4 a {
+.connect .icon-box h4 a {
   color: #fff;
 }
 
-.services .icon-box p {
+.connect .icon-box p {
   line-height: 24px;
   font-size: 14px;
   margin-bottom: 0;
 }
 
-.services .icon-box:hover {
+.connect .icon-box:hover {
   background: #18d26e;
   border-color: #18d26e;
 }
 
-.services .icon-box:hover .icon {
+.connect .icon-box:hover .icon {
   background: #fff;
 }
 
-.services .icon-box:hover .icon i {
+.connect .icon-box:hover .icon i {
   color: #18d26e;
 }
 
-.services .icon-box:hover .icon::before {
+.connect .icon-box:hover .icon::before {
   background: #35e888;
 }
 
-.services .icon-box:hover h4 a, .services .icon-box:hover p {
+.connect .icon-box:hover h4 a, .connect .icon-box:hover p {
   color: #fff;
 }
 
