--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #fff;
+  color: lightblue;
   position: relative;
   background: transparent;
 }
@@ -18,7 +18,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/bg.jpg") top right no-repeat;
+  background: dimgray url("../img/bg.jpg") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -42,7 +42,8 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-size: 40px;
+  font-family: 'Amatic SC', sans-serif; 
 }
 
 /*--------------------------------------------------------------
@@ -68,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   line-height: 1;
   font-weight: 700;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Amatic SC', sans-serif;
 }
 
 #header h1 a, #header h1 a:hover {
@@ -350,7 +351,7 @@ section .container {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #aaaaaa;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Amatic SC', sans-serif;
 }
 
 .section-title h2::after {
@@ -368,7 +369,7 @@ section .container {
   font-size: 36px;
   font-weight: 700;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Amatic SC', sans-serif;
   color: #fff;
 }
 
@@ -378,7 +379,7 @@ section .container {
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #18d26e;
+  color: pink
 }
 
 .about-me .content ul {
@@ -393,7 +394,7 @@ section .container {
 .about-me .content ul i {
   font-size: 20px;
   padding-right: 2px;
-  color: #18d26e;
+  color: pink;
 }
 
 .about-me .content p:last-child {
@@ -437,7 +438,7 @@ section .container {
 .counts .count-box p {
   padding: 0;
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Amatic SC', sans-serif;
   font-size: 14px;
 }
 
@@ -456,10 +457,9 @@ section .container {
   text-transform: uppercase;
   display: block;
   font-weight: 600;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Amatic SC', sans-serif;
   color: #fff;
 }
-
 .skills .progress .skill .val {
   float: right;
   font-style: normal;
@@ -612,7 +612,7 @@ section .container {
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Amatic SC', sans-serif;
   color: #18d26e;
   margin-bottom: 10px;
 }
