--- a/front-end/assets/styles/main.css
+++ b/front-end/assets/styles/main.css
@@ -1,53 +1,72 @@
+/* Chat Page Layout */
 
-
-
-/*NavBarStyling*/
-#navbar {
-    outline-style: solid;
-    outline-color:#add8e6;
-    float: left;
-    
+.chat {
+    display: flex;
 }
 
-#search-button {
-    border-color: #ffc0cb;
-    font: 16px;
-    color: black;
-
+.chat__sidebar {
+    height: 100vh;
+    color: white;
+    background: #333744;
+    width: 225px;
+    overflow-y: scroll
 }
 
-#search-button:hover {
-    background-color: #ffc0cb;
-    border-color: #ffc0cb;
+/* Chat styles */
+
+.chat__main {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    max-height: 100vh;
 }
 
-/*maincontent*/
-body {
-    background-color:#add8e6;
-    
+.chat__messages {
+    flex-grow: 1;
+    padding: 24px 24px 0 24px;
+    overflow-y: scroll;
 }
 
-.jumbotron {
-    background-color:#add8e6;
+/* Message Styles */
+
+.message {
+    margin-bottom: 16px;   
 }
 
+.message__name {
+    font-weight: 600;
+    font-size: 14px;
+    margin-right: 8px;
+}
 
+.message__meta {
+    color: #777;
+    font-size: 14px;
+}
 
+.message a {
+    color: #0070CC;
+}
 
+/* Message Composition Styles */
 
+.compose {
+    display: flex;
+    flex-shrink: 0;
+    margin-top: 16px;
+    padding: 24px;
+}
 
+.compose form {
+    display: flex;
+    flex-grow: 1;
+    margin-right: 16px;
+}
 
-
-
-/*footer*/
-
-
-
-
-
-
-
-
-
-
-
+.compose input {
+    border: 1px solid #eeeeee;
+    width: 100%;
+    padding: 12px;
+    margin: 0 16px 0 0;
+    flex-grow: 1;
+}
