--- a/front-end/assets/styles/main.css
+++ b/front-end/assets/styles/main.css
@@ -94,17 +94,17 @@ h2 {
   }
   
   .fa-facebook {
-    background: #55ACEE;
+    background: #add8e6;
     color: white;
   }
 
   .fa-twitter {
-    background: #55ACEE;
+    background: #add8e6;
     color: white;
   }
 
   .fa-instagram {
-    background:#55ACEE;
+    background:#add8e6;
     color: white;
   }
 
